--- a/Convert-Money/css/style.css
+++ b/Convert-Money/css/style.css
@@ -1,94 +1,96 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    outline: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  outline: none;
 }
 
 body {
-    background-color: #8A51FC;
+  background-color: #8a51fc;
 }
 
 .logo {
-    width: 200px;
-    margin: 18px auto;
-    display: block;
+  width: 150px;
+  margin: 18px auto;
+  display: block;
 }
 
 main {
-    background-color: #ccc;
-    width: 375px;
-    border-radius: 10px;
-    margin: 0 auto;
-    padding: 38px 24px 33px;
+  background-color: #ccc;
+  width: 375px;
+  border-radius: 10px;
+  margin: 0 auto;
+  padding: 38px 24px 33px;
 }
 
 label {
-    font-size: 15px;
-    font-weight: 500;
-    color: #777;
+  font-size: 15px;
+  font-weight: 500;
+  color: #777;
 }
 
 label p {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-select, input {
-    width: 100%;
-    height: 48px;
-    border-radius: 5px;
-    appearance: none;
-    padding-left: 10px;
-    font-size: 16px;
-    font-weight: 700;
-    margin-bottom: 10px;
-    border: none;
-    color: #555;
-    cursor: pointer;
+select,
+input {
+  width: 100%;
+  height: 48px;
+  border-radius: 5px;
+  appearance: none;
+  padding-left: 10px;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  border: none;
+  color: #555;
+  cursor: pointer;
 }
 
 button {
-    width: 100%;
-    height: 48px;
-    background-color: #772FD3;
-    border-radius: 10px;
-    color: #fff;
-    font-size: 18px;
-    border: none;
-    cursor: pointer;
-    margin: 15px 0 40px;
+  width: 100%;
+  height: 48px;
+  background-color: #772fd3;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+  margin: 15px 0 17px;
 }
 
 button:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 button:active {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 13px;
-    padding: 15px 0;
-    border-radius: 5px;
-    border: 2px solid #8A51FC;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 13px;
+  padding: 15px 0;
+  border-radius: 5px;
+  border: 2px solid #8a51fc;
 }
 
 .contain {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .current {
-    font-size: 1rem;
-    color: #777;
+  font-size: 1rem;
+  color: #777;
 }
 
-.current-value {
-    font-size: 1.3rem;
+.current-value,
+.current-value-to-convert {
+  font-size: 1.3rem;
 }
