--- a/Convert-Money/css/style.css
+++ b/Convert-Money/css/style.css
@@ -20,8 +20,20 @@ main {
   background-color: #ccc;
   width: 375px;
   border-radius: 10px;
-  margin: 0 auto;
+  margin: 0 auto 10px;
   padding: 38px 24px 33px;
+  max-height: 530px;
+  overflow-y: auto;
+}
+
+main::-webkit-scrollbar {
+  border-radius: 10px;
+  width: 10px;
+}
+
+main::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 5px;
 }
 
 label {
@@ -93,4 +105,26 @@ section {
 .current-value,
 .current-value-to-convert {
   font-size: 1.3rem;
+}
+
+@media screen and (max-width: 450px) {
+  main {
+    width: 80%;
+  }
+
+  .logo {
+    width: 100px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  main {
+    width: 80%;
+    margin-bottom: 10px;
+  }
+
+  .logo {
+    width: 75px;
+    /* margin-bottom: 60px; */
+  }
 }
