--- a/Convert-Money/css/style.css
+++ b/Convert-Money/css/style.css
@@ -22,8 +22,8 @@ main {
   border-radius: 10px;
   margin: 0 auto 10px;
   padding: 38px 24px 33px;
-  max-height: 530px;
-  overflow-y: auto;
+  height: 730px;
+  /* overflow-y: auto; */
 }
 
 main::-webkit-scrollbar {
