--- a/Convert-Money/css/style.css
+++ b/Convert-Money/css/style.css
@@ -22,18 +22,7 @@ main {
   border-radius: 10px;
   margin: 0 auto 10px;
   padding: 38px 24px 33px;
-  max-height: 500px;
-  overflow-y: auto;
-}
-
-main::-webkit-scrollbar {
-  border-radius: 10px;
-  width: 10px;
-}
-
-main::-webkit-scrollbar-thumb {
-  background-color: #555;
-  border-radius: 5px;
+  height: 700px;
 }
 
 label {
@@ -117,10 +106,20 @@ section {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 376px) {
   main {
     width: 80%;
-    margin-bottom: 10px;
+    height: 100%;
+    margin: 10px auto;
+    padding: 12px 24px 17px;
+  }
+
+  section {
+    padding: 3px 0;
+  }
+
+  .logo {
+    display: none;
   }
 
   .logo {
